tests/spec/non_conformant/errors/import/file/mixin/simple/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin/simple"

mod inside;

mod outside;
